--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,15 @@
+// android/build.gradle (root-level build.gradle)
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.0.2'
+    }
+}
+
 allprojects {
     repositories {
         google()
