--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   image_picker: ^1.1.2
   giphy_get: ^3.5.6
   google_maps_flutter: ^2.10.0
+  youtube_player_flutter: ^9.1.1
+  flutter_inappwebview: ^6.1.5
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
@@ -133,7 +136,7 @@ flutter:
     - res/images/iconamoon_arrow-up-2-thin.svg
     - res/images/iconamoon_arrow-down-2-thin.svg
     - res/images/searchIcon.svg
-
+    - res/images/verified-outline.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
